# aws-projekt

./: LICENSE.md  README.md  cdk.context.json  pyproject.toml
cdk/: app.py  cdk.context.json  cdk.json  check.py
cdk/cdk.out/: EC2Stack.assets.json  EC2Stack.template.json  MSKStack.assets.json  MSKStack.template.json  S3Stack.assets.json  S3Stack.template.json  VPCStack.assets.json  VPCStack.template.json  manifest.json  tree.json
cdk/cdk.out/asset.a5f27b703d208914fa378c3a766c71aa893ece5de23025afa63170d1861179fd/iot/publisher/: main.py
cdk/cdk.out/asset.a5f27b703d208914fa378c3a766c71aa893ece5de23025afa63170d1861179fd/iot/subscriber/: main.py
cdk/myconstructs/: knowledge_base.py  opensearch_index.py
cdk/scripts/: cdk_workflow.py  cleanup_stacks.py  create_kafka_topics.py  save_outputs.py
cdk/stacks/: bedrock_stack.py  ec2_stack.py  iot_stack.py  msk_stack.py  opensearch_stack.py  rag_stack.py  s3_stack.py  vpc_stack.py
config/: .env  stack_outputs_20250321_201947.json  stack_outputs_20250321_212931.json
knowledge_base/: config.py
